##Text encoding: utf-8

2009-01-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: one more double bond position fix.
	* libs/gcp/fragment.cc: always replace main atom when its symbol is gone.

2009-01-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* AUTHORS: added brasilian translator.
	* Makefile.am: added COPYING-LIBS (for canvas library).

2009-01-10  Daniel Leidert  <daniel.leidert@wgdd.de>
	* **/cc, **/.h: Fixed FSF address.

2009-01-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.10.4).

2008-12-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: fix stereochemistry for InChI and SMILES output.

2008-12-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/zoomdlg.cc: fix spin button callback behavior.

2008-12-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/document.cc: fix loading CIF files.

2008-12-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/canvas/gcp-canvas-group.c: a better fix for #24869.
	* libs/gcp/application.cc: don't change tool if Tool::Deactivate returns
	false.
	* libs/gcp/document.cc: fix a possible crasher.

2008-11-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.10.3).

2008-11-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: unescape uri before displaying it.
	* libs/gcp/stringdlg.cc: ditto.
	* plugins/paint/wikipedia/wikipediatool.cc: ditto.
	* programs/crystal/application.cc: ditto.
	* programs/crystal/document.cc: ditto.
	* programs/spectra/document.cc: ditto.

2008-11-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/canvas/gcp-canvas-group.c: (gnome_canvas_group_ext_bounds): take
	invisible items into account. Fixes #24869.
	* libs/gcp/stringdlg.cc: unescape uri before displaying it.
	* programs/3d/application.cc: ditto.
	* programs/3d/document.cc: ditto.
	* programs/calc/gchemcalc.cc: ditto.